--- a/interests.html
+++ b/interests.html
@@ -197,11 +197,18 @@
 
     </footer>
     <script>
-        
+        function initMap() {
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 3,
+                center: {
+                    lat: 46.619261,
+                    lng: -33.134766
+                }
+            });
+        }
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJHAfXHR1FGj5jKndeFehIaryfyR44ylg&callback=initMap"></script>
-    <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
