--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <script type="text/javascript">
     (function () {
         emailjs.init({
-            publicKey: "YOUR_PUBLIC_KEY",
+            publicKey: "AU2Bd0KDF7sY98NK-",
         });
     })();
 </script>
