--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,8 @@
 </script>
 <script type="text/javascript">
     (function () {
-        emailjs.init({
-            publicKey: "AU2Bd0KDF7sY98NK-",
-        });
-    })();
+        emailjs.init("AU2Bd0KDF7sY98NK-");
+      })();
 </script>
 </head>
 <body>
@@ -59,8 +57,7 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form onsubmit="return sendMail(this);"></form>
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
